# DingTalk-Download-Tool

./: .env.example  .gitignore  pyproject.toml  requirements.txt
config/: settings.yaml
docs/tasks/20260116-钉钉直播回放下载软件开发指南/: ACCEPTANCE_钉钉直播回放下载软件开发指南.md  ALIGNMENT_钉钉直播回放下载软件开发指南.md  CONSENSUS_钉钉直播回放下载软件开发指南.md  DESIGN_钉钉直播回放下载软件开发指南.md  FINAL_钉钉直播回放下载软件开发指南.md  TASK_钉钉直播回放下载软件开发指南.md  TODO_钉钉直播回放下载软件开发指南.md
docs/tasks/20260116134602-项目初始化/: ACCEPTANCE_项目初始化.md  ALIGNMENT_项目初始化.md  CONSENSUS_项目初始化.md  DESIGN_项目初始化.md  FINAL_项目初始化.md  TASK_项目初始化.md  TODO_项目初始化.md
docs/钉钉直播回放下载软件开发指南/: 钉钉直播回放下载软件开发指南-第1章.md  钉钉直播回放下载软件开发指南-第2章.md  钉钉直播回放下载软件开发指南-第3章.md  钉钉直播回放下载软件开发指南-第4章.md  钉钉直播回放下载软件开发指南-第5章.md  钉钉直播回放下载软件开发指南-附录.md  钉钉直播回放下载软件开发指南.md
